--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,3 +1,8 @@
-</div> </div>    
+</div> 
+<div class="footer" role=""footer>
+<a href="--page--">Edit Page</a>
+<a href="edit.html">Edit Instructions/Process</a>
+</div>
+</div>    
 </body>
 </html>
