--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -7,9 +7,12 @@
     <title>--title--</title>
 </head>
 <body>
-<div class="containter">
+<div class="container">
     <div class="banner">
-        <div class="logo"></div>
+        <div class="logo">
+            <a href="index.html"><img src="logo.svg" alt="Logo goto home page"></a>
+
+        </div>
         <div class="banner-title">--title--</div>
     </div>
     <div class="content" role="main">
